--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "reddit-oauth": "^1.1.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5",
+    "requests": "^0.3.0",
+    "snoowrap": "^1.20.1"
+  }
 }
